Turn on ruff linting (#38)
* currently only flake8 is used, with some checks disabled
* many other linters exist (pycodestyle, pylint, additions to flake8),
which are all useful to find errors
* ruff attempts to be the union of these linters, and faster
* it also has an language server, so it integrates the lints into your
chosen IDE
* However, at the moment, running `ruff check neurodamus` results in:
```
$ ruff check neurodamus --select ALL
[...snip out errrors...]
Found 6863 errors.
[*] 719 fixable with the `--fix` option (1563 hidden fixes can be enabled with the `--unsafe-fixes` option).
```
Which is overwhelming to work on.

I have cleared a bunch of them in this PR; however, I have also virtually disabled checks by exempting all the files in neurodamus since the still raise many errors.

--- a/tox.ini
+++ b/tox.ini
@@ -61,14 +61,16 @@ skip_install = True
 deps =
     ruff
 commands =
-	ruff format --check neurodamus
+    ruff format --check neurodamus
+    ruff check neurodamus
 
 [testenv:format]
 skip_install = True
 deps =
     ruff
 commands =
-	ruff format neurodamus
+    ruff format neurodamus
+    ruff check --fix neurodamus
 
 [testenv:docs]
 changedir = docs
