workaround to make integration* tests to run locally

--- a/tox.ini
+++ b/tox.ini
@@ -38,8 +38,8 @@ commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing tests/integration"
 
-[testenv:bbp-model]
-# Please module load neurodamus-neocortex py-neurodamus beforehand
+[testenv:integration-e2e-scientific]
+# Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 passenv = *
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
@@ -47,8 +47,19 @@ setenv =
     NEURON_INIT_MPI=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
-    pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/integration-e2e}
+    ; pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/integration-e2e}
+    pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific}
 
+[testenv:integration-ngv]
+# Please you need to spack load neurodamus-models model=neocortex +ngv+metabolism or use an equivalent spack virtual env
+passenv = *
+setenv =
+    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    HOC_LIBRARY_PATH={toxinidir}/core/hoc:{env:HOC_LIBRARY_PATH}
+    NEURON_INIT_MPI=1
+commands =
+    python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
+    pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific-ngv}
 
 [testenv:flake8]
 changedir = {toxinidir}
