better tox commands

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,14 @@ venv
 # tests and coverage
 .coverage
 .tox
-tests/output
+*pkl.gz
+cell_memory_usage.json
+mcomplex.dat
+memory_per_metype.json
+sim_conf/*
+tests/simulations/*/output*
+tests/simulations/usecase3/reporting*
+*.SUCCESS
 
 # Build and docs folder/files
 build/*
