--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,17 @@
 name = neurodamus
 
 [tox]
-envlist = flake8, unit
+envlist = flake8, unit, baseline, integration, e2e, scientific
 
 [testenv]
 deps =
     -r tests/requirements.txt
+
+[testenv:clean]
+skip_install = true
+allowlist_externals = sh
+commands =    
+    sh -c "rm -rf *.log allocation*.pkl.gz cell_memory_usage.json mcomplex.dat memory_per_metype.json .coverage sim_conf tests/simulations/usecase3/*.json.SUCCESS tests/simulations/v5_gapjunctions/output tests/simulations/v5_gapjunctions/simulation_config.json.SUCCESS tests/simulations/v5_sonata/output_sonata2 tests/simulations/v5_sonata/simulation_config_mini.json.SUCCESS"
 
 [testenv:unit]
 deps =
@@ -27,8 +33,6 @@ deps =
     {[testenv:unit]deps}
     neuron
     morphio
-passenv =
-    NEURODAMUS_NEOCORTEX_ROOT
 setenv =
     NEURON_INIT_MPI=0
 allowlist_externals =
@@ -38,7 +42,20 @@ commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing tests/integration"
 
-[testenv:integration-e2e-scientific]
+[testenv:e2e]
+# Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
+passenv = *
+setenv =
+    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    HOC_LIBRARY_PATH={toxinidir}/core/hoc:{env:HOC_LIBRARY_PATH}
+    NEURON_INIT_MPI=1
+allowlist_externals =
+    sh
+commands =
+    python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
+    pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/integration-e2e}
+
+[testenv:scientific]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 passenv = *
 setenv =
@@ -47,10 +64,10 @@ setenv =
     NEURON_INIT_MPI=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
-    ; pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/integration-e2e}
     pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific}
+    
 
-[testenv:integration-ngv]
+[testenv:ngv]
 # Please you need to spack load neurodamus-models model=neocortex +ngv+metabolism or use an equivalent spack virtual env
 passenv = *
 setenv =
