--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 name = neurodamus
 
 [tox]
-envlist = flake8, unit, baseline, integration, e2e, scientific
+envlist = flake8, format, unit, baseline, integration, e2e, scientific
 
 [testenv]
 deps =
@@ -47,7 +47,7 @@ commands =
 passenv = *
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
-    HOC_LIBRARY_PATH={toxinidir}/core/hoc:{env:HOC_LIBRARY_PATH}
+    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
     NEURON_INIT_MPI=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
@@ -58,7 +58,7 @@ commands =
 passenv = *
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
-    HOC_LIBRARY_PATH={toxinidir}/core/hoc:{env:HOC_LIBRARY_PATH}
+    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
     NEURON_INIT_MPI=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
@@ -70,7 +70,7 @@ commands =
 passenv = *
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
-    HOC_LIBRARY_PATH={toxinidir}/core/hoc:{env:HOC_LIBRARY_PATH}
+    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
     NEURON_INIT_MPI=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
