--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -97,7 +97,7 @@ jobs:
         python -m venv venv
         . ./venv/bin/activate
         python -m pip install --upgrade pip setuptools
-        pip install cython numpy wheel pkgconfig
+        pip install cython numpy wheel pkgconfig tox
 
     - name: Add virtual environment to PATH
       run: echo "${{ github.workspace }}/venv/bin" >> $GITHUB_PATH
