--- a/tox.ini
+++ b/tox.ini
@@ -68,6 +68,9 @@ commands =
 
 [testenv:test-scientific-ngv]
 # Please you need to spack load neurodamus-models model=neocortex +ngv+metabolism or use an equivalent spack virtual env
+deps =
+    {[testenv]deps}
+    morphio
 passenv = *
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
