--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 name = neurodamus
 
 [tox]
-envlist = flake8, format, test-unit, test-baseline, test-integration, test-integration-e2e, scientific, scientific-ngv
+envlist = flake8, format, unit, baseline, integration, integration-e2e, scientific
 
 [testenv]
 deps =
@@ -14,21 +14,21 @@ allowlist_externals = sh
 commands =    
     sh -c "rm -rf *.log allocation*.pkl.gz cell_memory_usage.json mcomplex.dat memory_per_metype.json .coverage sim_conf tests/simulations/usecase3/*.json.SUCCESS tests/simulations/v5_gapjunctions/output tests/simulations/v5_gapjunctions/simulation_config.json.SUCCESS tests/simulations/v5_sonata/output_sonata2 tests/simulations/v5_sonata/simulation_config_mini.json.SUCCESS"
 
-[testenv:test-unit]
+[testenv:unit]
 deps =
     {[testenv]deps}
     pytest-cov
 commands =
     pytest --cov=neurodamus --cov-report=term-missing tests/unit
 
-[testenv:test-baseline]
+[testenv:baseline]
 deps =
     {[testenv]deps}
     pytest-cov
 commands =
     pytest --cov=neurodamus --cov-report=term-missing tests/test_import.py
 
-[testenv:test-integration]
+[testenv:integration]
 deps =
     {[testenv]deps}
     pytest-cov
@@ -43,7 +43,7 @@ commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing tests/integration"
 
-[testenv:test-integration-e2e]
+[testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 passenv = *
 setenv =
@@ -54,7 +54,7 @@ commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
     pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/integration-e2e}
 
-[testenv:test-scientific]
+[testenv:scientific]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 passenv = *
 setenv =
@@ -66,7 +66,7 @@ commands =
     pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific}
     
 
-[testenv:test-scientific-ngv]
+[testenv:scientific-ngv]
 # Please you need to spack load neurodamus-models model=neocortex +ngv+metabolism or use an equivalent spack virtual env
 deps =
     {[testenv]deps}
