--- a/tox.ini
+++ b/tox.ini
@@ -10,9 +10,23 @@ deps =
 
 [testenv:clean]
 skip_install = true
-allowlist_externals = sh
+allowlist_externals = zsh
 commands =    
-    sh -c "rm -rf *.log allocation*.pkl.gz cell_memory_usage.json mcomplex.dat memory_per_metype.json .coverage sim_conf tests/simulations/usecase3/*.json.SUCCESS tests/simulations/v5_gapjunctions/output tests/simulations/v5_gapjunctions/simulation_config.json.SUCCESS tests/simulations/v5_sonata/output_sonata2 tests/simulations/v5_sonata/simulation_config_mini.json.SUCCESS"
+    zsh -c "setopt nullglob && rm -rf \
+    **/*.log \
+    **/*.json.SUCCESS \
+    tests/simulations/neuromodulation/output* \
+    tests/simulations/ngv/output* \
+    **/*allocation*.pkl.gz \
+    **/memory_per_metype.json \
+    **/mcomplex.dat \
+    **/cell_memory_usage.json \
+    .coverage \
+    tests/simulations/usecase3/output* \
+    tests/simulations/usecase3/reporting* \
+    tests/simulations/v5_gapjunctions/output* \
+    tests/simulations/v5_sonata/output* \
+    sim_conf"
 
 [testenv:unit]
 deps =
