--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,31 @@
 name = neurodamus
 
 [tox]
-envlist = flake8, unit
+envlist = flake8, format, unit, baseline, integration, integration-e2e, scientific
 
 [testenv]
 deps =
     -r tests/requirements.txt
+
+[testenv:clean]
+skip_install = true
+allowlist_externals = zsh
+commands =    
+    zsh -c "setopt nullglob && rm -rf \
+    **/*.log \
+    **/*.json.SUCCESS \
+    tests/simulations/neuromodulation/output* \
+    tests/simulations/ngv/output* \
+    **/*allocation*.pkl.gz \
+    **/memory_per_metype.json \
+    **/mcomplex.dat \
+    **/cell_memory_usage.json \
+    .coverage \
+    tests/simulations/usecase3/output* \
+    tests/simulations/usecase3/reporting* \
+    tests/simulations/v5_gapjunctions/output* \
+    tests/simulations/v5_sonata/output* \
+    sim_conf"
 
 [testenv:unit]
 deps =
@@ -24,11 +44,10 @@ commands =
 
 [testenv:integration]
 deps =
-    {[testenv:unit]deps}
+    {[testenv]deps}
+    pytest-cov
     neuron
     morphio
-passenv =
-    NEURODAMUS_NEOCORTEX_ROOT
 setenv =
     NEURON_INIT_MPI=0
 allowlist_externals =
@@ -38,17 +57,42 @@ commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing tests/integration"
 
-[testenv:bbp-model]
-# Please module load neurodamus-neocortex py-neurodamus beforehand
+[testenv:integration-e2e]
+# Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 passenv = *
 setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
-    HOC_LIBRARY_PATH={toxinidir}/core/hoc:{env:HOC_LIBRARY_PATH}
+    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
     NEURON_INIT_MPI=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
     pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/integration-e2e}
 
+[testenv:scientific]
+# Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
+passenv = *
+setenv =
+    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
+    NEURON_INIT_MPI=1
+commands =
+    python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
+    pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific}
+    
+
+[testenv:scientific-ngv]
+# Please you need to spack load neurodamus-models model=neocortex +ngv+metabolism or use an equivalent spack virtual env
+deps =
+    {[testenv]deps}
+    morphio
+passenv = *
+setenv =
+    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
+    NEURON_INIT_MPI=1
+commands =
+    python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
+    pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific-ngv}
 
 [testenv:flake8]
 changedir = {toxinidir}
