--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,8 @@ commands =
     tests/simulations/usecase3/reporting* \
     tests/simulations/v5_gapjunctions/output* \
     tests/simulations/v5_sonata/output* \
-    sim_conf"
+    sim_conf \
+    cellstate*.json"
 
 [testenv:baseline]
 deps =
