--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,8 @@ allowlist_externals =
     sh
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
-    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked tests/unit"
+    # TODO removeme
+    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus  --cov-report=html --forked tests/unit/test_stimuli.py"
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
