--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
 [testenv:clean]
 skip_install = true
 allowlist_externals = zsh
-commands =    
+commands =
     zsh -c "setopt nullglob && rm -rf \
     **/*.log \
     **/*.json.SUCCESS \
@@ -48,7 +48,7 @@ allowlist_externals =
     sh
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
-    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked tests/unit"
+    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
@@ -71,7 +71,6 @@ setenv =
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
     pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific}
-    
 
 [testenv:scientific-ngv]
 # Please you need to spack load neurodamus-models model=neocortex +ngv+metabolism or use an equivalent spack virtual env
