--- a/tox.ini
+++ b/tox.ini
@@ -49,8 +49,7 @@ allowlist_externals =
     sh
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
-    # TODO removeme
-    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus  --cov-report=html --forked tests/unit/test_stimuli.py"
+    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
 [testenv:integration-e2e]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
