--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip tox coverage
 
-    - name: Run tox
+    - name: Run tox baseline
       run: |
         tox -e baseline
 
@@ -30,7 +30,7 @@ jobs:
       with:
         flag-name: baseline
 
-    - name: Run tox
+    - name: Run tox unit
       run: |
         rm -rf .coverage
         tox -e unit
