--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,22 @@ allowlist_externals =
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
-    ; sh -c ". {toxworkdir}/.envfile && pytest -x --forked {posargs:tests/unit/test_ringcells.py}"
+
+[testenv:removeme]
+deps =
+    {[testenv]deps}
+    pytest-cov
+    neuron
+    morphio
+setenv =
+    NEURON_INIT_MPI=0
+    PYTHONPATH={toxinidir}
+allowlist_externals =
+    {toxinidir}/ci/build_ndcore.sh
+    sh
+commands =
+    {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
+    sh -c ". {toxworkdir}/.envfile && pytest --basetemp=removeme -x --forked {posargs:tests/unit/test_synapse_connection_override.py}"
 
 
 [testenv:integration-e2e]
