--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,7 @@ allowlist_externals =
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest --basetemp=removeme -x --forked {posargs:tests/unit/test_synapse_connection_override.py}"
+    ; sh -c ". {toxworkdir}/.envfile && pytest -x --forked removeme.py"
 
 
 [testenv:integration-e2e]
